MCTSActionListener records all 3 targets